--- a/tex/Figures/tabdata/total_seqs.tex
+++ b/tex/Figures/tabdata/total_seqs.tex
@@ -1,20 +1,26 @@
-\begin{tabular}{L{1in}|L{1.2in}|L{.95in}}\hline
-Database & Strain & No. of Sequences \\\hline
-NCBI& Influenza  H1N1 &17,894\\\hline
-NCBI& Influenza  H3N2 &14,699\\\hline
-GISAID& Influenza  H1N1  &43,611\\\hline
-GISAID& Influenza  H1N2  &	
-856\\\hline
-GISAID& Influenza  H3N2  &	
-77,598\\\hline
-GISAID& Influenza  H5N-  &	
-3,503\\\hline
-GISAID& Influenza  H7N-  &	
-1,399 \\\hline
-GISAID& Influenza  H9N2  &	
-304\\\hline
-GISAID& Influenza  H10N8  &	
-1\\\hline
-Total & &159,865\\\hline
-Total H1N1 + H3N2 & &153,802\\\hline
+\begin{tabular}{L{0.5in}|L{0.5in}|L{0.7in}|L{0.7in}|L{0.5in}}\hline
+ Database &  Subtype & No.  HA  Sequences & No.  NA  Sequences & Total \\\hline
+GISAID&H1N1&1,3536&13,501&27,037\\\hline
+GISAID&H1N2&857&857&1,714\\\hline
+GISAID&H3N2&40,257&40,096&8,0353\\\hline
+GISAID&H5N1&1,970&1,943&3,913\\\hline
+GISAID&H5N2&22&24&46\\\hline
+GISAID&H5N6&186&186&372\\\hline
+GISAID&H5N8&1,449&1401&2,850\\\hline
+GISAID&H7N1&3&3&6\\\hline
+GISAID&H7N2&2&2&4\\\hline
+GISAID&H7N3&101&99&200\\\hline
+GISAID&H7N5&1&1&2\\\hline
+GISAID&H7N6&8&8&16\\\hline
+GISAID&H7N7&57&56&113\\\hline
+GISAID&H7N8&4&4&8\\\hline
+GISAID&H7N9&1265&1264&2,529\\\hline
+GISAID&H9N2&312&312&624\\\hline
+GISAID&H10N8&1&1&2\\\hline
+NCBI&H1N1&17,902&16,645&34,547\\\hline
+NCBI&H3N2&18,257&14,691&32,948\\\hline
+NCBI&H5N1&1&1&2\\\hline 
+NCBI&H7N7&1&1&2\\\hline
+NCBI&H7N9&2&2&4\\\hline
+&Total&96,195&91,099&187,294\\\hline
 \end{tabular}
