--- a/tex/SIfig.tex
+++ b/tex/SIfig.tex
@@ -10,7 +10,7 @@
 %#############################################
 \begin{table}[!ht]
 \mnp{\textwidth}{  \centering
- \captionN{Number of sequences collected from public databases}\label{tabseq}
+ \captionN{Number of Influenza sequences collected from public databases}\label{tabseq}
 \sffamily\fontsize{8}{8}\selectfont
 \input{Figures/tabdata/total_seqs}
 }
