--- a/tex/cover.tex
+++ b/tex/cover.tex
@@ -96,20 +96,18 @@ Chicago, IL 60637\\
 
 Dear \BEDITOR  
 
-Please find enclosed the  manuscript entitled ``\textbf{\TITLE}'' for your consideration for publication in \JNAME as an original research article. In this study we develop a novel computational approach to learn from viral sequence databases to \textbf{quantitatively assess the pandemic potential of animal strains that are not yet known to circulate in humans}. This capability might be  crucially important to enable preemptive pandemic mitigation strategies, the relevance of which cannot be overstated in the light of the recent pandemic.
+Please find enclosed the  manuscript entitled ``\textbf{\TITLE}'' for your consideration for publication in \JNAME as an original research article. In this study we develop a  computational approach to learn the emergent rules guiding evolutionary change in Influenza viruses  to quantitatively assess the pandemic potential of animal strains that are \textbf{not yet known to circulate in humans}. This capability might be  crucially important to enable preemptive pandemic mitigation strategies, the relevance of which cannot be overstated in the light of the recent pandemic.
 
-While zoonotic emergence is suspected to have caused multiple devastating pandemics in the past, and despite vast amounts of money and effort being spent on bio-surveillance that collects thousands of strains annually, our ability to risk-rank these collected strains remains limited.
+While zoonotic emergence is suspected to have caused multiple devastating pandemics in the past, and despite vast amounts of money and effort being spent globally on bio-surveillance to collect thousands of strains annually, our ability to risk-rank these collected strains remains limited.
 
-The state-of-the-art Influenza Risk Assessment Tool (IRAT) from the CDC to assess such risk includes time-consuming experimental assays, taking possibly weeks to evaluate each strain (only 22 have been analyzed in past 6-8 years, while $6,000$ strains have been collected post-2020). Our calculations take about 6s/strain, while strongly correlating with the published scores, and thus may provide the foundation on which a proactive intervention strategy can be built in future.
-
-Additionally, with growing vaccine hesitancy in the US, it might be easier as a public health measure to preemptively inoculate animals against targeted strains, than it is to field such policies in the human population.
-
-As an added advantage, our approach, which essentially models  how viable genotypic variations are shaped by evolutionary constraints using only genomic sequences  of key viral proteins, can predict future mutations, and dominant strains in future flu seasons, sufficiently ahead of time,  to improve vaccine cocktail recommendations.
+The state-of-the-art Influenza Risk Assessment Tool (IRAT) from the CDC to assess such risk includes time-consuming experimental assays, taking possibly weeks to evaluate each strain (only 22 have been analyzed in past 6-8 years, while $6,000$ strains have been collected post-2020). Our calculations take about 6 sec/strain, while strongly correlating with the published scores, and thus may provide the foundation on which a proactive intervention strategy can be built in future. As an added advantage, our approach is shown to be able to predict dominant strains of the seasonal epidemic, sufficiently ahead of time, better than what has been reported before, and thus may be used  to improve vaccine cocktail recommendations. 
 
 
-We are led by a multi-disciplinary team  of experts in  machine learning (Chattopadhyay), and vaccine design (Esser-Kahn), and is a collaboration between the Department of Medicine and the Pritzker School of Molecular Engineering, at the University of Chicago.
- 
-We believe that  the potential  importance   of our results in predicting emergence, ranking risky pathogens and potentially improving the design of the annual flu-shot,   merits consideration  for  publication in \JNAME. We look forward to, and  hope for your positive  response.
+Furthermore, with growing vaccine hesitancy in the US, it might be easier as a public health measure to preemptively inoculate animals against targeted strains, than it is to field such policies in the human population.
+
+
+We are led by a multi-disciplinary team  of experts in  machine learning (Chattopadhyay), and vaccine design (Esser-Kahn), and is a collaboration between the Department of Medicine and the Pritzker School of Molecular Engineering, at the University of Chicago. We believe that  the potential  importance   of our results in predicting emergence, ranking risky pathogens and potentially improving the design of the annual flu-shot,   merits consideration  for  publication in \JNAME. We look forward to, and  hope for your positive  response.
+
 \Space
 \vspace{-14pt}
  
