--- a/tex/customdef.tex
+++ b/tex/customdef.tex
@@ -57,6 +57,7 @@ $^\bigstar$To whom correspondence should be addressed: e-mail: \texttt{ishanu@uc
 \def\Appendix{Appendix}
 \def\qnet{Enet\xspace}
 \def\enet{Emergenet\xspace}
+\def\qnet{\enet}%Enet\xspace}
 \def\erisk{E-risk\xspace}
 \def\qdist{E-distance\xspace}
 \def\cov{COVID-19\xspace}
