--- a/qnet_predictions/influenza_qnet_predictions_2022_2023.ipynb
+++ b/qnet_predictions/influenza_qnet_predictions_2022_2023.ipynb
@@ -11,13 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "id": "refined-gardening",
    "metadata": {},
    "outputs": [],
    "source": [
     "# basic imports\n",
     "import os \n",
+    "import shutil\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import math\n",
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 2,
    "id": "willing-welcome",
    "metadata": {},
    "outputs": [],
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "id": "recent-florida",
    "metadata": {},
    "outputs": [],
@@ -174,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bf6b17b",
+   "id": "cf17acfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "id": "43d17013",
    "metadata": {},
    "outputs": [],
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 6,
    "id": "cfe5d1f6",
    "metadata": {},
    "outputs": [],
@@ -254,31 +255,16 @@
    "metadata": {},
    "source": [
     "## Create Dictionary of Sequence Data and Distance Matrices\n",
-    "- `seq_dict[STRAIN]` contains a dataframe for strains of that variety `data` and the corresponding distance matrix `dist_matrix`\n",
+    "- `seq_dict[STRAIN]` contains a dataframe for strains of that variety `data` and the corresponding distance matrix `dist_matrix`, and the `second_term` at 95% significance, which is defined by $|H^t|A\\text{ln}\\omega_y$ (see eq. 9 in paper)\n",
     "- If combined north and south data for that strain exceeds 1000, randomly sample 1000 sequences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "ba91462d",
+   "execution_count": null,
+   "id": "cbc15b92",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e995e4589e74bce8484b59f28e34e31",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/8 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "seq_dict = {}\n",
     "\n",
@@ -288,6 +274,8 @@
     "    NAME = FILE[6:13] # ex. 'h1n1_ha'\n",
     "    \n",
     "    # load this years qnet\n",
+    "    if not os.path.exists('qnet_models/' + FILE + '.joblib'):\n",
+    "        shutil.unpack_archive('qnet_models/' + FILE + '.joblib.zip', 'qnet_models')\n",
     "    myqnet = load_qnet('qnet_models/' + FILE + '.joblib')\n",
     "    \n",
     "    # adjust trunc\n",
@@ -295,16 +283,41 @@
     "    if 'na' in FILE:\n",
     "        TRUNC = NA_TRUNC\n",
     "        \n",
-    "    # load gisaid data (P^t - population at time t)\n",
+    "    # load gisaid data (H^t - population at time t)\n",
     "    gisaid_df1 = parse_fasta(GISAID_PATH + FILE + \".fasta\", TRUNC)\n",
     "    gisaid_df2 = parse_fasta(GISAID_PATH + FILE1 + \".fasta\", TRUNC)\n",
-    "    gisaid_df = pd.concat([gisaid_df1, gisaid_df2]).sample(min(1000, len(gisaid_df1) + len(gisaid_df2)), random_state = 42)\n",
+    "    H = min(1000, len(gisaid_df1) + len(gisaid_df2))\n",
+    "    gisaid_df = pd.concat([gisaid_df1, gisaid_df2]).sample(H, random_state = 42)\n",
     "    # make sequence matrix with gisaid data\n",
     "    seqs_matrix = np.array(list(gisaid_df['sequence'].values))\n",
     "    dist_matrix = qdistance_matrix(seqs_matrix, seqs_matrix, myqnet, myqnet)\n",
+    "    first_term = sum(dist_matrix)\n",
+    "    # compute second term, 95% significance (alpha = 0.05)\n",
+    "    A = 0.95/(math.sqrt(8) * TRUNC**2)\n",
+    "    second_term = np.ones(len(seqs_matrix)) * H * A\n",
+    "    for j in range(len(seqs_matrix)):\n",
+    "        second_term[j] *= membership_degree(seqs_matrix[j], myqnet)\n",
     "    \n",
     "    # save to dict\n",
-    "    seq_dict[FILE] = {'data':gisaid_df, 'dist_matrix':dist_matrix}"
+    "    seq_dict[FILE] = {'data':gisaid_df, \n",
+    "                      'first_term':first_term, \n",
+    "                      'second_term':second_term}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "610d5e32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save data as csv\n",
+    "os.makedirs('results/distance_matrices', exist_ok=True)\n",
+    "for FILE in FILES:\n",
+    "    first_term = seq_dict[FILE]['first_term']\n",
+    "    second_term = seq_dict[FILE]['second_term']\n",
+    "    df = pd.DataFrame({'first term': first_term, 'second_term':second_term})\n",
+    "    df.to_csv('results/distance_matrices/' + FILE + '.csv', index=False)  "
    ]
   },
   {
@@ -313,23 +326,24 @@
    "metadata": {},
    "source": [
     "## Predictions\n",
-    "Q-Centroid: $$\\widehat{x}^{t+1} = argmin_{x\\in P} \\sum_{y \\in P^t} \\theta(x,y)$$\n",
-    "- Where $P^t$ is the sequence population at time $t$ and $P = P^t \\cup P^{t-1} \\cup P^{t-2} \\cup \\dots \\cup P^1$.\n",
-    "- $\\theta(x,y)$ is the qdistance between x and y in their respective Qnets"
+    "Q-Centroid: $$x_{*}^{t+\\delta} = argmin_{y\\in \\bigcup_{r\\leq t}H^{\\tau}} \\sum_{x \\in {H^t}} \\theta(x,y) - |H^t|A \\text{ln}\\omega_y$$\n",
+    "- $x_{*}^{t+\\delta}$ is the dominant strain in the upcoming flu season at time $t+\\omega$\n",
+    "- $H^t$ is the sequence population at time $t$\n",
+    "- $\\theta(x,y)$ is the qdistance between $x$ and $y$ in their respective Qnets\n",
+    "- $A = \\frac{1-\\alpha}{\\sqrt{8}N^2}$, where $\\alpha$ is a fixed significance level and $N$ is the sequence length considered\n",
+    "- $\\text{ln}\\omega_y$ is the membership degree of sequence $y$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "id": "89412cfd",
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 19,
+   "id": "4e6df393",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8c547417a664e2b8013ad973e9c62f0",
+       "model_id": "e8a517687a35406caa2b06ef5bd93ac4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -346,67 +360,21 @@
     "rec_names = []\n",
     "rec_seqs = []\n",
     "\n",
-    "# set to True to include sequences from P^t-1 U P^t-2 U ... U P^1 - previous populations\n",
-    "PAST = False\n",
-    "\n",
     "for FILE in tqdm(FILES):\n",
     "    NAME = FILE[6:13] # ex. 'h1n1_ha'\n",
-    "    \n",
-    "    # load this years qnet\n",
-    "    myqnet = load_qnet('qnet_models/' + FILE + '.joblib')\n",
     "    \n",
     "    # adjust trunc\n",
     "    TRUNC = HA_TRUNC\n",
     "    if 'na' in FILE:\n",
     "        TRUNC = NA_TRUNC\n",
     "        \n",
-    "    # load gisaid data (P^t - population at time t)\n",
+    "    # load gisaid data (H^t - population at time t)\n",
     "    gisaid_df = seq_dict[FILE]['data']\n",
-    "    # make sequence matrix with gisaid data\n",
-    "    cur_seqs_matrix = np.array(list(gisaid_df['sequence'].values))\n",
     "    \n",
-    "    cur_rec_names = []\n",
-    "    cur_rec_seqs = []\n",
-    "    cur_rec_qdist_sums = []\n",
-    "    \n",
-    "    # loop through available past data\n",
-    "    if PAST:\n",
-    "        # load ncbi data (P^t-1 U P^t-2 U ... U P^1 - previous populations)\n",
-    "        ncbi_df = parse_fasta_withdate(NCBI_PATH + NAME + \".fasta\", TRUNC)\n",
-    "        # loops through years with qnet available\n",
-    "        for yr in tqdm(qnet_dict[NAME]['years']):\n",
-    "            # filter ncbi df by year and drop the year column\n",
-    "            df = ncbi_df[ncbi_df['year'] == yr].drop(columns = 'year')\n",
-    "            if len(df) == 0:\n",
-    "                continue\n",
-    "            seq_df = df.sample(min(1000, len(df)), random_state = 42)\n",
-    "\n",
-    "            # compute qdistance matrix\n",
-    "            past_seqs_matrix = np.array(list(seq_df['sequence'].values))\n",
-    "            dist_matrix = qdistance_matrix(past_seqs_matrix, cur_seqs_matrix, qnet_dict[NAME]['qnets'][yr], myqnet)\n",
-    "\n",
-    "            # compute q-centroid using formula\n",
-    "            sums = list(dist_matrix.sum(axis=1))\n",
-    "            cur_min_ind = np.argmin(sums)\n",
-    "            cur_rec_name = seq_df.iloc[cur_min_ind].values[0]\n",
-    "            cur_rec_seq = seq_df.iloc[cur_min_ind].values[1]\n",
-    "\n",
-    "            # save to current results\n",
-    "            cur_rec_names.append(cur_rec_name)\n",
-    "            cur_rec_seqs.append(cur_rec_seq)\n",
-    "            cur_rec_qdist_sums.append(min(sums))\n",
-    "    \n",
-    "    # find centroid of sequences in P^t\n",
-    "    dist_matrix = seq_dict[FILE]['dist_matrix']\n",
-    "    sums = list(dist_matrix.sum(axis=1))\n",
-    "    cur_rec_names.append(gisaid_df.iloc[np.argmin(sums)].values[0])\n",
-    "    cur_rec_seqs.append(gisaid_df.iloc[np.argmin(sums)].values[1])\n",
-    "    cur_rec_qdist_sums.append(min(sums))\n",
-    "    \n",
-    "    # find centroid among current results\n",
-    "    min_ind = np.argmin(cur_rec_qdist_sums)\n",
-    "    rec_name = cur_rec_names[min_ind]\n",
-    "    rec_seq = cur_rec_seqs[min_ind]\n",
+    "    # find centroid\n",
+    "    sums = seq_dict[FILE]['first_term'] - seq_dict[FILE]['second_term']\n",
+    "    rec_name = gisaid_df.iloc[np.argmin(sums)].values[0]\n",
+    "    rec_seq = gisaid_df.iloc[np.argmin(sums)].values[1]\n",
     "    \n",
     "    # save results\n",
     "    rec_files.append(FILE[:13])\n",
@@ -416,8 +384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "0ca636ee",
+   "execution_count": 20,
+   "id": "b3e62d7f",
    "metadata": {},
    "outputs": [
     {
@@ -462,19 +430,19 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>north_h3n2_ha</td>\n",
-       "      <td>A/Denmark/370/2022</td>\n",
-       "      <td>MKTIIALSNILCLVFAQKIPGNDNSTATLCLGHHAVPNGTIVKTIT...</td>\n",
+       "      <td>A/Ireland/14993/2022</td>\n",
+       "      <td>MKTIIALSNILCLVFAQKIPGNDNSTATLCLGHHAVPNGMIVKTIT...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>north_h3n2_na</td>\n",
-       "      <td>A/Michigan/UOM10042819294/2021</td>\n",
+       "      <td>A/Iowa/20/2022</td>\n",
        "      <td>MNPNQKIITIGSVSLTISTICFFMQIAILITTVTLHFKQYEFNSPP...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>south_h1n1_ha</td>\n",
-       "      <td>A/Cote_D'Ivoire/1270/2021</td>\n",
+       "      <td>A/Cote_D'Ivoire/1855/2021</td>\n",
        "      <td>MKAILVVLLYTFTTANADTLCIGYHANNSTDTVDTVLEKNVTVTHS...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -486,14 +454,14 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>south_h3n2_ha</td>\n",
-       "      <td>A/Saint-Martin/00754/2022</td>\n",
+       "      <td>A/Latvia/04-86261/2022</td>\n",
        "      <td>MKTIIALSNILCLVFAQKIPGNDNSTATLCLGHHAVPNGTIVKTIT...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>south_h3n2_na</td>\n",
-       "      <td>A/Texas/12723/2022</td>\n",
-       "      <td>MNPNQKIITIGSVSLTISTICFFMQIAILITTVTLHFKQYEFNSPP...</td>\n",
+       "      <td>A/Michigan/UOM10045036720/2022</td>\n",
+       "      <td>MNPNQKIITIGSVSLTISTICFFMQIAILITTVTLHFKQYEFNXPP...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -503,25 +471,25 @@
        "          strain                            name  \\\n",
        "0  north_h1n1_ha        A/Netherlands/00068/2022   \n",
        "1  north_h1n1_na                 A/Lyon/820/2021   \n",
-       "2  north_h3n2_ha              A/Denmark/370/2022   \n",
-       "3  north_h3n2_na  A/Michigan/UOM10042819294/2021   \n",
-       "4  south_h1n1_ha       A/Cote_D'Ivoire/1270/2021   \n",
+       "2  north_h3n2_ha            A/Ireland/14993/2022   \n",
+       "3  north_h3n2_na                  A/Iowa/20/2022   \n",
+       "4  south_h1n1_ha       A/Cote_D'Ivoire/1855/2021   \n",
        "5  south_h1n1_na                 A/Dakar/35/2021   \n",
-       "6  south_h3n2_ha       A/Saint-Martin/00754/2022   \n",
-       "7  south_h3n2_na              A/Texas/12723/2022   \n",
+       "6  south_h3n2_ha          A/Latvia/04-86261/2022   \n",
+       "7  south_h3n2_na  A/Michigan/UOM10045036720/2022   \n",
        "\n",
        "                                            sequence  \n",
        "0  MKAILVVLLYTFTTANADTLCIGYHANNSTDTVDTVLEKNVTVTHS...  \n",
        "1  MNPNQKIITIGSICMAIGTANLILQIGNIISIWVSHSIQIGNQSQI...  \n",
-       "2  MKTIIALSNILCLVFAQKIPGNDNSTATLCLGHHAVPNGTIVKTIT...  \n",
+       "2  MKTIIALSNILCLVFAQKIPGNDNSTATLCLGHHAVPNGMIVKTIT...  \n",
        "3  MNPNQKIITIGSVSLTISTICFFMQIAILITTVTLHFKQYEFNSPP...  \n",
        "4  MKAILVVLLYTFTTANADTLCIGYHANNSTDTVDTVLEKNVTVTHS...  \n",
        "5  MNPNQKIITIGSICMAIGTANLILQIGNIISIWVSHSIQIGNQSQI...  \n",
        "6  MKTIIALSNILCLVFAQKIPGNDNSTATLCLGHHAVPNGTIVKTIT...  \n",
-       "7  MNPNQKIITIGSVSLTISTICFFMQIAILITTVTLHFKQYEFNSPP...  "
+       "7  MNPNQKIITIGSVSLTISTICFFMQIAILITTVTLHFKQYEFNXPP...  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,14 +504,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "id": "2d8d90cc",
+   "execution_count": null,
+   "id": "523b8f90",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save dataframe as csv\n",
     "os.makedirs('results', exist_ok=True)  \n",
-    "predictions.to_csv('results/influenza_qnet_predictions_2022_2023.csv', index=False)  "
+    "predictions.to_csv('results/influenza_qnet_predictions_2022_2023.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "89412cfd",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a8c547417a664e2b8013ad973e9c62f0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# rec_files = []\n",
+    "# rec_names = []\n",
+    "# rec_seqs = []\n",
+    "\n",
+    "# # set to True to include sequences from H^t-1 U H^t-2 U ... U H^1 - previous populations\n",
+    "# PAST = False\n",
+    "\n",
+    "# for FILE in tqdm(FILES):\n",
+    "#     NAME = FILE[6:13] # ex. 'h1n1_ha'\n",
+    "    \n",
+    "#     # load this years qnet\n",
+    "#     if not os.path.exists('qnet_models/' + FILE + '.joblib'):\n",
+    "#         shutil.unpack_archive('qnet_models/' + FILE + '.joblib.zip', 'qnet_models')\n",
+    "#     myqnet = load_qnet('qnet_models/' + FILE + '.joblib')\n",
+    "    \n",
+    "#     # adjust trunc\n",
+    "#     TRUNC = HA_TRUNC\n",
+    "#     if 'na' in FILE:\n",
+    "#         TRUNC = NA_TRUNC\n",
+    "        \n",
+    "#     # load gisaid data (H^t - population at time t)\n",
+    "#     gisaid_df = seq_dict[FILE]['data']\n",
+    "#     # make sequence matrix with gisaid data\n",
+    "#     cur_seqs_matrix = np.array(list(gisaid_df['sequence'].values))\n",
+    "    \n",
+    "#     cur_rec_names = []\n",
+    "#     cur_rec_seqs = []\n",
+    "#     cur_rec_qdist_sums = []\n",
+    "    \n",
+    "#     # loop through available past data\n",
+    "#     if PAST:\n",
+    "#         # load ncbi data (H^t-1 U H^t-2 U ... U H^1 - previous populations)\n",
+    "#         ncbi_df = parse_fasta_withdate(NCBI_PATH + NAME + \".fasta\", TRUNC)\n",
+    "#         # loops through years with qnet available\n",
+    "#         for yr in tqdm(qnet_dict[NAME]['years']):\n",
+    "#             # filter ncbi df by year and drop the year column\n",
+    "#             df = ncbi_df[ncbi_df['year'] == yr].drop(columns = 'year')\n",
+    "#             if len(df) == 0:\n",
+    "#                 continue\n",
+    "#             seq_df = df.sample(min(1000, len(df)), random_state = 42)\n",
+    "\n",
+    "#             # compute qdistance matrix\n",
+    "#             past_seqs_matrix = np.array(list(seq_df['sequence'].values))\n",
+    "#             dist_matrix = qdistance_matrix(past_seqs_matrix, cur_seqs_matrix, qnet_dict[NAME]['qnets'][yr], myqnet)\n",
+    "\n",
+    "#             # compute q-centroid using formula\n",
+    "#             sums = list(dist_matrix.sum(axis=1))\n",
+    "#             cur_min_ind = np.argmin(sums)\n",
+    "#             cur_rec_name = seq_df.iloc[cur_min_ind].values[0]\n",
+    "#             cur_rec_seq = seq_df.iloc[cur_min_ind].values[1]\n",
+    "\n",
+    "#             # save to current results\n",
+    "#             cur_rec_names.append(cur_rec_name)\n",
+    "#             cur_rec_seqs.append(cur_rec_seq)\n",
+    "#             cur_rec_qdist_sums.append(min(sums))\n",
+    "    \n",
+    "#     # find centroid of sequences in H^t\n",
+    "#     dist_matrix = seq_dict[FILE]['dist_matrix']\n",
+    "#     sums = list(dist_matrix.sum(axis=1))\n",
+    "#     cur_rec_names.append(gisaid_df.iloc[np.argmin(sums)].values[0])\n",
+    "#     cur_rec_seqs.append(gisaid_df.iloc[np.argmin(sums)].values[1])\n",
+    "#     cur_rec_qdist_sums.append(min(sums))\n",
+    "    \n",
+    "#     # find centroid among current results\n",
+    "#     min_ind = np.argmin(cur_rec_qdist_sums)\n",
+    "#     rec_name = cur_rec_names[min_ind]\n",
+    "#     rec_seq = cur_rec_seqs[min_ind]\n",
+    "    \n",
+    "#     # save results\n",
+    "#     rec_files.append(FILE[:13])\n",
+    "#     rec_names.append(rec_name)\n",
+    "#     rec_seqs.append(rec_seq)"
    ]
   },
   {
