--- a/qnet_predictions/influenza_qnet_predictions_2021_2022.ipynb
+++ b/qnet_predictions/influenza_qnet_predictions_2021_2022.ipynb
@@ -11,13 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "refined-gardening",
    "metadata": {},
    "outputs": [],
    "source": [
     "# basic imports\n",
     "import os \n",
+    "import shutil\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import math\n",
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "willing-welcome",
    "metadata": {},
    "outputs": [],
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "recent-florida",
    "metadata": {},
    "outputs": [],
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "9c3ab7ca",
    "metadata": {},
    "outputs": [],
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "737e661e",
    "metadata": {},
    "outputs": [],
@@ -269,20 +270,20 @@
    "metadata": {},
    "source": [
     "## Create Dictionary of Sequence Data and Distance Matrices\n",
-    "- `seq_dict[STRAIN]` contains a dataframe for strains of that variety `data` and the corresponding distance matrix `dist_matrix`\n",
+    "- `seq_dict[STRAIN]` contains a dataframe for strains of that variety `data` and the corresponding distance matrix `dist_matrix`, and the `second_term` at 95% significance, which is defined by $|H^t|A\\text{ln}\\omega_y$ (see eq. 9 in paper)\n",
     "- If combined north and south data for that strain exceeds 1000, randomly sample 1000 sequences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "id": "4b64aa4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50d51f3f17c4479daaa3fcf0cc6d6950",
+       "model_id": "17045c40a71c4dcabc85cf1ce2fa496c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -303,6 +304,8 @@
     "    NAME = FILE[6:13] # ex. 'h1n1_ha'\n",
     "    \n",
     "    # load this years qnet\n",
+    "    if not os.path.exists('qnet_models/' + FILE + '.joblib'):\n",
+    "        shutil.unpack_archive('qnet_models/' + FILE + '.joblib.zip', 'qnet_models')\n",
     "    myqnet = load_qnet('qnet_models/' + FILE + '.joblib')\n",
     "    \n",
     "    # adjust trunc\n",
@@ -310,16 +313,41 @@
     "    if 'na' in FILE:\n",
     "        TRUNC = NA_TRUNC\n",
     "        \n",
-    "    # load gisaid data (P^t - population at time t)\n",
+    "    # load gisaid data (H^t - population at time t)\n",
     "    gisaid_df1 = parse_fasta(GISAID_PATH + FILE + \".fasta\", TRUNC)\n",
     "    gisaid_df2 = parse_fasta(GISAID_PATH + FILE1 + \".fasta\", TRUNC)\n",
-    "    gisaid_df = pd.concat([gisaid_df1, gisaid_df2]).sample(min(1000, len(gisaid_df1) + len(gisaid_df2)), random_state = 42)\n",
+    "    H = min(1000, len(gisaid_df1) + len(gisaid_df2))\n",
+    "    gisaid_df = pd.concat([gisaid_df1, gisaid_df2]).sample(H, random_state = 42)\n",
     "    # make sequence matrix with gisaid data\n",
     "    seqs_matrix = np.array(list(gisaid_df['sequence'].values))\n",
     "    dist_matrix = qdistance_matrix(seqs_matrix, seqs_matrix, myqnet, myqnet)\n",
+    "    first_term = sum(dist_matrix)\n",
+    "    # compute second term, 95% significance (alpha = 0.05)\n",
+    "    A = 0.95/(math.sqrt(8) * TRUNC**2)\n",
+    "    second_term = np.ones(len(seqs_matrix)) * H * A\n",
+    "    for j in range(len(seqs_matrix)):\n",
+    "        second_term[j] *= membership_degree(seqs_matrix[j], myqnet)\n",
     "    \n",
     "    # save to dict\n",
-    "    seq_dict[FILE] = {'data':gisaid_df, 'dist_matrix':dist_matrix}"
+    "    seq_dict[FILE] = {'data':gisaid_df, \n",
+    "                      'first_term':first_term, \n",
+    "                      'second_term':second_term}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d66eff0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save data as csv\n",
+    "os.makedirs('results/distance_matrices', exist_ok=True)\n",
+    "for FILE in FILES:\n",
+    "    first_term = seq_dict[FILE]['first_term']\n",
+    "    second_term = seq_dict[FILE]['second_term']\n",
+    "    df = pd.DataFrame({'first term': first_term, 'second_term':second_term})\n",
+    "    df.to_csv('results/distance_matrices/' + FILE + '.csv', index=False)  "
    ]
   },
   {
@@ -328,23 +356,24 @@
    "metadata": {},
    "source": [
     "## Predictions\n",
-    "Q-Centroid: $$\\widehat{x}^{t+1} = argmin_{x\\in P} \\sum_{y \\in P^t} \\theta(x,y)$$\n",
-    "- Where $P^t$ is the sequence population at time $t$ and $P = P^t \\cup P^{t-1} \\cup P^{t-2} \\cup \\dots \\cup P^1$.\n",
-    "- $\\theta(x,y)$ is the qdistance between x and y in their respective Qnets"
+    "Q-Centroid: $$x_{*}^{t+\\delta} = argmin_{y\\in \\bigcup_{r\\leq t}H^{\\tau}} \\sum_{x \\in {H^t}} \\theta(x,y) - |H^t|A \\text{ln}\\omega_y$$\n",
+    "- $x_{*}^{t+\\delta}$ is the dominant strain in the upcoming flu season at time $t+\\omega$\n",
+    "- $H^t$ is the sequence population at time $t$\n",
+    "- $\\theta(x,y)$ is the qdistance between $x$ and $y$ in their respective Qnets\n",
+    "- $A = \\frac{1-\\alpha}{\\sqrt{8}N^2}$, where $\\alpha$ is a fixed significance level and $N$ is the sequence length considered\n",
+    "- $\\text{ln}\\omega_y$ is the membership degree of sequence $y$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "89412cfd",
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 20,
+   "id": "3adbfdcf",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3d23817201e4bedaecba33d0776b128",
+       "model_id": "b9df6c8b142c46f8a6e1fab30e3fcc3c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -361,67 +390,21 @@
     "rec_names = []\n",
     "rec_seqs = []\n",
     "\n",
-    "# set to True to include sequences from P^t-1 U P^t-2 U ... U P^1 - previous populations\n",
-    "PAST = False\n",
-    "\n",
     "for FILE in tqdm(FILES):\n",
     "    NAME = FILE[6:13] # ex. 'h1n1_ha'\n",
-    "    \n",
-    "    # load this years qnet\n",
-    "    myqnet = load_qnet('qnet_models/' + FILE + '.joblib')\n",
     "    \n",
     "    # adjust trunc\n",
     "    TRUNC = HA_TRUNC\n",
     "    if 'na' in FILE:\n",
     "        TRUNC = NA_TRUNC\n",
     "        \n",
-    "    # load gisaid data (P^t - population at time t)\n",
+    "    # load gisaid data (H^t - population at time t)\n",
     "    gisaid_df = seq_dict[FILE]['data']\n",
-    "    # make sequence matrix with gisaid data\n",
-    "    cur_seqs_matrix = np.array(list(gisaid_df['sequence'].values))\n",
     "    \n",
-    "    cur_rec_names = []\n",
-    "    cur_rec_seqs = []\n",
-    "    cur_rec_qdist_sums = []\n",
-    "    \n",
-    "    # loop through available past data\n",
-    "    if PAST:\n",
-    "        # load ncbi data (P^t-1 U P^t-2 U ... U P^1 - previous populations)\n",
-    "        ncbi_df = parse_fasta_withdate(NCBI_PATH + NAME + \".fasta\", TRUNC)\n",
-    "        # loops through years with qnet available\n",
-    "        for yr in tqdm(qnet_dict[NAME]['years']):\n",
-    "            # filter ncbi df by year and drop the year column\n",
-    "            df = ncbi_df[ncbi_df['year'] == yr].drop(columns = 'year')\n",
-    "            if len(df) == 0:\n",
-    "                continue\n",
-    "            seq_df = df.sample(min(1000, len(df)), random_state = 42)\n",
-    "\n",
-    "            # compute qdistance matrix\n",
-    "            past_seqs_matrix = np.array(list(seq_df['sequence'].values))\n",
-    "            dist_matrix = qdistance_matrix(past_seqs_matrix, cur_seqs_matrix, qnet_dict[NAME]['qnets'][yr], myqnet)\n",
-    "\n",
-    "            # compute q-centroid using formula\n",
-    "            sums = list(dist_matrix.sum(axis=1))\n",
-    "            cur_min_ind = np.argmin(sums)\n",
-    "            cur_rec_name = seq_df.iloc[cur_min_ind].values[0]\n",
-    "            cur_rec_seq = seq_df.iloc[cur_min_ind].values[1]\n",
-    "\n",
-    "            # save to current results\n",
-    "            cur_rec_names.append(cur_rec_name)\n",
-    "            cur_rec_seqs.append(cur_rec_seq)\n",
-    "            cur_rec_qdist_sums.append(min(sums))\n",
-    "    \n",
-    "    # find centroid of sequences in P^t\n",
-    "    dist_matrix = seq_dict[FILE]['dist_matrix']\n",
-    "    sums = list(dist_matrix.sum(axis=1))\n",
-    "    cur_rec_names.append(gisaid_df.iloc[np.argmin(sums)].values[0])\n",
-    "    cur_rec_seqs.append(gisaid_df.iloc[np.argmin(sums)].values[1])\n",
-    "    cur_rec_qdist_sums.append(min(sums))\n",
-    "    \n",
-    "    # find centroid among current results\n",
-    "    min_ind = np.argmin(cur_rec_qdist_sums)\n",
-    "    rec_name = cur_rec_names[min_ind]\n",
-    "    rec_seq = cur_rec_seqs[min_ind]\n",
+    "    # find centroid\n",
+    "    sums = seq_dict[FILE]['first_term'] - seq_dict[FILE]['second_term']\n",
+    "    rec_name = gisaid_df.iloc[np.argmin(sums)].values[0]\n",
+    "    rec_seq = gisaid_df.iloc[np.argmin(sums)].values[1]\n",
     "    \n",
     "    # save results\n",
     "    rec_files.append(FILE[:13])\n",
@@ -431,8 +414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "0ca636ee",
+   "execution_count": 71,
+   "id": "471e41bb",
    "metadata": {},
    "outputs": [
     {
@@ -483,19 +466,19 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>north_h3n2_na</td>\n",
-       "      <td>A/Darwin/9/2021</td>\n",
+       "      <td>A/Bangladesh/1916/2020</td>\n",
        "      <td>MNPNQKIITIGSVSLTISTICFFMQIAILITTVTLHFKQYEFNSPP...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>south_h1n1_ha</td>\n",
-       "      <td>A/Togo/35/2021</td>\n",
+       "      <td>A/Togo/0298/2021</td>\n",
        "      <td>MKAILVVLLYTFTTANADTLCIGYHANNSTDTVDTVLEKNVTVTHS...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>south_h1n1_na</td>\n",
-       "      <td>A/Togo/0155/2021</td>\n",
+       "      <td>A/NAGASAKI/8/2020</td>\n",
        "      <td>MNPNQKIITIGSICMTIGMANLILQIGNIISIWVSHSIQIGNQSQI...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -507,7 +490,7 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>south_h3n2_na</td>\n",
-       "      <td>A/Darwin/11/2021</td>\n",
+       "      <td>A/India/PUN-NIV301132/2021</td>\n",
        "      <td>MNPNQKIITIGSVSLTISTICFFMQIAILITTVTLHFKQYEFNSPP...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -519,11 +502,11 @@
        "0  north_h1n1_ha                  A/Togo/45/2021   \n",
        "1  north_h1n1_na                A/Togo/0071/2021   \n",
        "2  north_h3n2_ha  A/India/Pun-NIV291000/2021_Jan   \n",
-       "3  north_h3n2_na                 A/Darwin/9/2021   \n",
-       "4  south_h1n1_ha                  A/Togo/35/2021   \n",
-       "5  south_h1n1_na                A/Togo/0155/2021   \n",
+       "3  north_h3n2_na          A/Bangladesh/1916/2020   \n",
+       "4  south_h1n1_ha                A/Togo/0298/2021   \n",
+       "5  south_h1n1_na               A/NAGASAKI/8/2020   \n",
        "6  south_h3n2_ha      A/India/PUN-NIV301718/2021   \n",
-       "7  south_h3n2_na                A/Darwin/11/2021   \n",
+       "7  south_h3n2_na      A/India/PUN-NIV301132/2021   \n",
        "\n",
        "                                            sequence  \n",
        "0  MKAILVVLLYTFTTANADTLCIGYHANNSTDTVDTVLEKNVTVTHS...  \n",
@@ -536,7 +519,7 @@
        "7  MNPNQKIITIGSVSLTISTICFFMQIAILITTVTLHFKQYEFNSPP...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,21 +527,119 @@
    "source": [
     "for i in range(len(rec_seqs)):\n",
     "    rec_seqs[i] = ''.join(rec_seqs[i])\n",
-    "\n",
+    "    \n",
     "predictions = pd.DataFrame({'strain':rec_files, 'name':rec_names, 'sequence':rec_seqs})\n",
     "predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "2d8d90cc",
+   "execution_count": null,
+   "id": "450dc7e4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save dataframe as csv\n",
     "os.makedirs('results', exist_ok=True)  \n",
     "predictions.to_csv('results/influenza_qnet_predictions_2021_2022.csv', index=False)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "89412cfd",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e3d23817201e4bedaecba33d0776b128",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# rec_files = []\n",
+    "# rec_names = []\n",
+    "# rec_seqs = []\n",
+    "\n",
+    "# # set to True to include sequences from H^t-1 U H^t-2 U ... U H^1 - previous populations\n",
+    "# PAST = False\n",
+    "\n",
+    "# for FILE in tqdm(FILES):\n",
+    "#     NAME = FILE[6:13] # ex. 'h1n1_ha'\n",
+    "    \n",
+    "#     # load this years qnet\n",
+    "#     if not os.path.exists('qnet_models/' + FILE + '.joblib'):\n",
+    "#         shutil.unpack_archive('qnet_models/' + FILE + '.joblib.zip', 'qnet_models')\n",
+    "#     myqnet = load_qnet('qnet_models/' + FILE + '.joblib')\n",
+    "    \n",
+    "#     # adjust trunc\n",
+    "#     TRUNC = HA_TRUNC\n",
+    "#     if 'na' in FILE:\n",
+    "#         TRUNC = NA_TRUNC\n",
+    "        \n",
+    "#     # load gisaid data (H^t - population at time t)\n",
+    "#     gisaid_df = seq_dict[FILE]['data']\n",
+    "#     # make sequence matrix with gisaid data\n",
+    "#     cur_seqs_matrix = np.array(list(gisaid_df['sequence'].values))\n",
+    "    \n",
+    "#     cur_rec_names = []\n",
+    "#     cur_rec_seqs = []\n",
+    "#     cur_rec_qdist_sums = []\n",
+    "    \n",
+    "#     # loop through available past data\n",
+    "#     if PAST:\n",
+    "#         # load ncbi data (H^t-1 U H^t-2 U ... U H^1 - previous populations)\n",
+    "#         ncbi_df = parse_fasta_withdate(NCBI_PATH + NAME + \".fasta\", TRUNC)\n",
+    "#         # loops through years with qnet available\n",
+    "#         for yr in tqdm(qnet_dict[NAME]['years']):\n",
+    "#             # filter ncbi df by year and drop the year column\n",
+    "#             df = ncbi_df[ncbi_df['year'] == yr].drop(columns = 'year')\n",
+    "#             if len(df) == 0:\n",
+    "#                 continue\n",
+    "#             seq_df = df.sample(min(1000, len(df)), random_state = 42)\n",
+    "\n",
+    "#             # compute qdistance matrix\n",
+    "#             past_seqs_matrix = np.array(list(seq_df['sequence'].values))\n",
+    "#             dist_matrix = qdistance_matrix(past_seqs_matrix, cur_seqs_matrix, qnet_dict[NAME]['qnets'][yr], myqnet)\n",
+    "\n",
+    "#             # compute q-centroid using formula\n",
+    "#             sums = list(dist_matrix.sum(axis=1))\n",
+    "#             cur_min_ind = np.argmin(sums)\n",
+    "#             cur_rec_name = seq_df.iloc[cur_min_ind].values[0]\n",
+    "#             cur_rec_seq = seq_df.iloc[cur_min_ind].values[1]\n",
+    "\n",
+    "#             # save to current results\n",
+    "#             cur_rec_names.append(cur_rec_name)\n",
+    "#             cur_rec_seqs.append(cur_rec_seq)\n",
+    "#             cur_rec_qdist_sums.append(min(sums))\n",
+    "    \n",
+    "#     # find centroid of sequences in H^t\n",
+    "#     dist_matrix = seq_dict[FILE]['dist_matrix']\n",
+    "#     sums = list(dist_matrix.sum(axis=1))\n",
+    "#     cur_rec_names.append(gisaid_df.iloc[np.argmin(sums)].values[0])\n",
+    "#     cur_rec_seqs.append(gisaid_df.iloc[np.argmin(sums)].values[1])\n",
+    "#     cur_rec_qdist_sums.append(min(sums))\n",
+    "    \n",
+    "#     # find centroid among current results\n",
+    "#     min_ind = np.argmin(cur_rec_qdist_sums)\n",
+    "#     rec_name = cur_rec_names[min_ind]\n",
+    "#     rec_seq = cur_rec_seqs[min_ind]\n",
+    "    \n",
+    "#     # save results\n",
+    "#     rec_files.append(FILE[:13])\n",
+    "#     rec_names.append(rec_name)\n",
+    "#     rec_seqs.append(rec_seq)"
    ]
   },
   {
