--- a/tex/SIfig.tex
+++ b/tex/SIfig.tex
@@ -103,154 +103,154 @@ Phenotypes & Correlation \\\hline
 %#############################################
 
 
-\clearpage
+% \clearpage
 
 
 
- \begin{table}\centering
-\captionN{H1N1 NA Northern Hemisphere}\label{tabrec4}
+%  \begin{table}\centering
+% \captionN{H1N1 NA Northern Hemisphere}\label{tabrec4}
 
-\sffamily\fontsize{7}{8}\selectfont
+% \sffamily\fontsize{7}{8}\selectfont
 
-\input{Figures/tabdata/north_h1n1_na.tex}
-\flushleft
+% \input{Figures/tabdata/north_h1n1_na.tex}
+% \flushleft
 
-\fontsize{7}{7}\selectfont
-$^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
-\end{table}
-
-
-\begin{table}\centering
-\captionN{H1N1 NA Southern Hemisphere}\label{tabrec5}
-
-\sffamily\fontsize{7}{8}\selectfont
-
-\input{Figures/tabdata/south_h1n1_na.tex}
-\flushleft
-
-\fontsize{7}{7}\selectfont
-$^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
-\end{table}
-%#############################################
-%#############################################
+% \fontsize{7}{7}\selectfont
+% $^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
+% \end{table}
 
 
-%#############################################
+% \begin{table}\centering
+% \captionN{H1N1 NA Southern Hemisphere}\label{tabrec5}
 
-\begin{table}\centering
-\captionN{H3N2 NA Northern Hemisphere}\label{tabrec6}
+% \sffamily\fontsize{7}{8}\selectfont
 
-\sffamily\fontsize{7}{8}\selectfont
+% \input{Figures/tabdata/south_h1n1_na.tex}
+% \flushleft
 
-\input{Figures/tabdata/north_h3n2_na.tex}
-\flushleft
-
-\fontsize{7}{7}\selectfont
-$^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
-\end{table}
-%#############################################
-
-%#############################################
-
-\begin{table}\centering
-\captionN{H3N2 NA Southern Hemisphere}\label{tabrec7}
-
-\sffamily\fontsize{7}{8}\selectfont
-
-\input{Figures/tabdata/south_h3n2_na.tex}
-\flushleft
-
-\fontsize{7}{7}\selectfont
-$^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
-\end{table}
-%#############################################
-
-
-
-
-
-
-
-%#############################################
-%#############################################
-
-\begin{table}\centering
-\captionN{H1N1 NA Northern Hemisphere (Multi-cluster)}\label{tabrec8}
-
-\sffamily\fontsize{7}{8}\selectfont
-
-\input{Figures/tabdata/north_h1n1_na_3cluster.tex}
-\flushleft
-
-\fontsize{7}{7}\selectfont
-$^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
-\end{table}
-
-%#############################################
-%#############################################
-
-\begin{table}\centering
-\captionN{H1N1 NA Southern Hemisphere (Multi-cluster)}\label{tabrec9}
-
-\sffamily\fontsize{7}{8}\selectfont
-
-\input{Figures/tabdata/south_h1n1_na_3cluster.tex}
-\flushleft
-
-\fontsize{7}{7}\selectfont
-$^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
-\end{table}
-
-%#############################################
-%#############################################
-
-\begin{table}\centering
-\captionN{H3N2 NA Northern Hemisphere (Multi-cluster)}\label{tabrec10}
-
-\sffamily\fontsize{7}{8}\selectfont
-
-\input{Figures/tabdata/north_h3n2_na_3cluster.tex}
-\flushleft
-
-\fontsize{7}{7}\selectfont
-$^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
-\end{table}
-
-%#############################################
-%#############################################
-
-\begin{table}\centering
-\captionN{H3N2 NA Southern Hemisphere (Multi-cluster)}\label{tabrec11}
-
-\sffamily\fontsize{7}{8}\selectfont
-
-\input{Figures/tabdata/south_h3n2_na_3cluster.tex}
-\flushleft
-
-\fontsize{7}{7}\selectfont
-$^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
-\end{table}
-%#############################################
+% \fontsize{7}{7}\selectfont
+% $^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
+% \end{table}
 % %#############################################
+% %#############################################
+
+
+% %#############################################
+
+% \begin{table}\centering
+% \captionN{H3N2 NA Northern Hemisphere}\label{tabrec6}
+
+% \sffamily\fontsize{7}{8}\selectfont
+
+% \input{Figures/tabdata/north_h3n2_na.tex}
+% \flushleft
+
+% \fontsize{7}{7}\selectfont
+% $^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
+% \end{table}
+% %#############################################
+
+% %#############################################
+
+% \begin{table}\centering
+% \captionN{H3N2 NA Southern Hemisphere}\label{tabrec7}
+
+% \sffamily\fontsize{7}{8}\selectfont
+
+% \input{Figures/tabdata/south_h3n2_na.tex}
+% \flushleft
+
+% \fontsize{7}{7}\selectfont
+% $^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
+% \end{table}
+% %#############################################
+
+
+
+
+
+
+
+% %#############################################
+% %#############################################
+
+% \begin{table}\centering
+% \captionN{H1N1 NA Northern Hemisphere (Multi-cluster)}\label{tabrec8}
+
+% \sffamily\fontsize{7}{8}\selectfont
+
+% \input{Figures/tabdata/north_h1n1_na_3cluster.tex}
+% \flushleft
+
+% \fontsize{7}{7}\selectfont
+% $^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
+% \end{table}
+
+% %#############################################
+% %#############################################
+
+% \begin{table}\centering
+% \captionN{H1N1 NA Southern Hemisphere (Multi-cluster)}\label{tabrec9}
+
+% \sffamily\fontsize{7}{8}\selectfont
+
+% \input{Figures/tabdata/south_h1n1_na_3cluster.tex}
+% \flushleft
+
+% \fontsize{7}{7}\selectfont
+% $^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
+% \end{table}
+
+% %#############################################
+% %#############################################
+
+% \begin{table}\centering
+% \captionN{H3N2 NA Northern Hemisphere (Multi-cluster)}\label{tabrec10}
+
+% \sffamily\fontsize{7}{8}\selectfont
+
+% \input{Figures/tabdata/north_h3n2_na_3cluster.tex}
+% \flushleft
+
+% \fontsize{7}{7}\selectfont
+% $^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
+% \end{table}
+
+% %#############################################
+% %#############################################
+
+% \begin{table}\centering
+% \captionN{H3N2 NA Southern Hemisphere (Multi-cluster)}\label{tabrec11}
+
+% \sffamily\fontsize{7}{8}\selectfont
+
+% \input{Figures/tabdata/south_h3n2_na_3cluster.tex}
+% \flushleft
+
+% \fontsize{7}{7}\selectfont
+% $^\star$ Dominant strain is calculated as the one closest to the centroid in the strain space that year in the edit distance metric
+% \end{table}
+% %#############################################
+% % %#############################################
 
 %#############################################
 \ifFIGS
 %#############################################
 
-\begin{table}[!ht]\centering
-\captionN{Influenza A Strains Evaluated by IRAT and Corresponding \enet Computed Current Risk Scores}\label{irattab_current}
+% \begin{table}[!ht]\centering
+% \captionN{Influenza A Strains Evaluated by IRAT and Corresponding \enet Computed Current Risk Scores}\label{irattab_current}
 
-\sffamily\fontsize{7}{8}\selectfont
+% \sffamily\fontsize{7}{8}\selectfont
 
-\input{Figures/tabdata/irat_predictions_current}
-\flushleft
+% \input{Figures/tabdata/irat_predictions_current}
+% \flushleft
 
-\fontsize{8}{8}\selectfont
-$^\star$This table contains \enet scores for IRAT computed using current sequence data, thereby computing the current risk of these strains.  
-\end{table}
-\else
-\refstepcounter{table}\label{irattab_current}
-\fi
+% \fontsize{8}{8}\selectfont
+% $^\star$This table contains \enet scores for IRAT computed using current sequence data, thereby computing the current risk of these strains.  
+% \end{table}
+% \else
+% \refstepcounter{table}\label{irattab_current}
+% \fi
 % #############################################
 % #############################################
 
